--- a/index.html
+++ b/index.html
@@ -19,29 +19,31 @@
     <main>
         <article>
             <section>
-                <div>
-                    <form>
-                        <input type="text" name="" id="" placeholder="Paris, Belleville">
-                    </form>
+                <div class="loc-input">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>Paris, Belleville</p>
                 </div>
-                <div class="greyblock">
+                <div class="greyblock welcome">
                     <h3>Réservez le menu qui vous convient</h3>
                     <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                     <button>Explorez nos restaurants</button>
                 </div>
             </section>
-            <section>
+            <section class="steps">
                 <h3>Fonctionnement</h3>
-                <div>
-                    <div>1</div>
+                <div class="step">
+                    <div class="step--number">1</div>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
                     <p>Choisissez un restaurant</p>
                 </div>
-                <div>
-                    <div>2</div>
+                <div class="step">
+                    <div class="step--number">2</div>
+                    <i class="fa-solid fa-bars"></i>
                     <p>Composez votre menu</p>
                 </div>
-                <div>
-                    <div>3</div>
+                <div class="step--active">
+                    <div class="step--number">3</div>
+                    <i class="fa-solid fa-store"></i>
                     <p>Dégustez au restaurant</p>
                 </div>
             </section>
@@ -83,6 +85,7 @@
         <p>Mentions légales</p>
         <p>Contact</p>
     </footer>
+    <script src="https://kit.fontawesome.com/bfd598c223.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
