--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
         rel="stylesheet">
     <title>ohmyfood</title>
 </head>
@@ -57,70 +59,88 @@
                 </div>
             </section>
             <section class="greyblock">
-                <h3>Restaurants</h3>
+                <h4>Restaurants</h4>
+
                 <div class="restaurant-box">
                     <div class="restaurant-box--img-container">
+                        <div class="new-badge">
+                            Nouveau
+                        </div>
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt="Restaurant La palette du goût">
                     </div>
                     <div class="restaurant-box--flex-ctn">
-                        <div>
-                            <h4>La palette du goût</h4>
-                            <p>Ménilmontant</p>
-                        </div>
+                        <a href="./menu-lapalettedugout.html">
+                            <div>
+                                <h4>La palette du goût</h4>
+                                <p>Ménilmontant</p>
+                            </div>
+                        </a>
                         <i class="fa-regular fa-heart"></i>
-                        <!-- <i class="fa-solid fa-heart"></i> -->
+                        <i class="fa-solid fa-heart"></i>
                     </div>
                 </div>
+
+
                 <div class="restaurant-box">
                     <div class="restaurant-box--img-container">
+                        <div class="new-badge">
+                            Nouveau
+                        </div>
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
                     </div>
                     <div class="restaurant-box--flex-ctn">
-                        <div>
-                            <h4>La note enchantée</h4>
-                            <p>Charonne</p>
-                        </div>
+                        <a href="./menu-lanoteenchantee.html">
+                            <div>
+                                <h4>La note enchantée</h4>
+                                <p>Charonne</p>
+                            </div>
+                        </a>
                         <i class="fa-regular fa-heart"></i>
-                        <!-- <i class="fa-solid fa-heart"></i> -->
+                        <i class="fa-solid fa-heart"></i>
                     </div>
                 </div>
-                </div>
+
                 <div class="restaurant-box">
                     <div class="restaurant-box--img-container">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="Restaurant À la française">
                     </div>
                     <div class="restaurant-box--flex-ctn">
-                        <div>
-                            <h4>À la française</h4>
-                            <p>Cité Rouge</p>
-                        </div>
+                        <a href="./menu-alafrancaise.html">
+                            <div>
+                                <h4>À la française</h4>
+                                <p>Cité Rouge</p>
+                            </div>
+                        </a>
                         <i class="fa-regular fa-heart"></i>
-                        <!-- <i class="fa-solid fa-heart"></i> -->
+                        <i class="fa-solid fa-heart"></i>
                     </div>
                 </div>
+
                 <div class="restaurant-box">
                     <div class="restaurant-box--img-container">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt="Restaurant Le délice des sens">
                     </div>
                     <div class="restaurant-box--flex-ctn">
-                        <div>
-                            <h4>Le délice des sens</h4>
-                            <p>Folie-Méricourt</p>
-                        </div>
+                        <a href="./menu-ledelicedessens.html">
+                            <div>
+                                <h4>Le délice des sens</h4>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                        </a>
                         <i class="fa-regular fa-heart"></i>
-                        <!-- <i class="fa-solid fa-heart"></i> -->
+                        <i class="fa-solid fa-heart"></i>
                     </div>
                 </div>
             </section>
         </article>
     </main>
     <footer>
-        logo
-        <p>Proposer un restaurant</p>
-        <p>Devenir partenaire</p>
+        <img src="images/logo/ohmyfood@2x.svg" alt="logo Oh My Food">
+        <p><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
+        <p><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
         <p>Mentions légales</p>
         <p>Contact</p>
     </footer>
