--- a/menu-alafrancaise.html
+++ b/menu-alafrancaise.html
@@ -1,129 +1,214 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sass/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="sass/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <title>ohmyfood - Menu - À la française</title>
-</head>
+  </head>
 
-<body>
-    <header><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a><img src="images/logo/ohmyfood.png"
-            alt="logo Oh My Food"></header>
+  <body>
+    <header>
+      <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a
+      ><img src="images/logo/ohmyfood.png" alt="logo Oh My Food" />
+    </header>
 
     <main>
-        <div class="menu-container">
-            <div class="menu-container--img-container">
-                <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-            </div>
-
-            <div class="menu-container--insert">
-                <div class="menu-container--insert--header">
-                    <h3>À la française</h3>
-                    <i class="fa-regular fa-heart fa-xl"></i>
-                </div>
-                <div class="menu-section">
-                    <h3>Entrées</h3>
-                    <div class="menu-section--underline"></div>
-                    <div class="menu-cards">
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Tartare de poulpe acidulé</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Aux zests d'orange</p>
-                                <p class="menu-card--flex--price">25€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Velouté de légumes d'antan</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Carotte, panais, topinambour</p>
-                                <p class="menu-card--flex--price">35€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Soupe à l'oignon</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Revisitée</p>
-                                <p class="menu-card--flex--price">20€</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-section">
-                    <h3>Plats</h3>
-                    <div class="menu-section--underline"></div>
-                    <div class="menu-cards">
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Coquilles Saint_Jacques</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Accompagnées d'une purée de panais</p>
-                                <p class="menu-card--flex--price">40€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Magret de canard</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Et parmentier de pommes de terres</p>
-                                <p class="menu-card--flex--price">35€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Pigeonneau d'Ille-et-Vilaine</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Sur son lit de gnocchis aux légumes</p>
-                                <p class="menu-card--flex--price">44€</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-section">
-                    <h3>Desserts</h3>
-                    <div class="menu-section--underline"></div>
-                    <div class="menu-cards">
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Pétales de violettes glacés</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Et purée de noisettes</p>
-                                <p class="menu-card--flex--price">18€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Fondant au chocolat</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Revisité</p>
-                                <p class="menu-card--flex--price">22€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Millefeuille croustillant</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Myrtilles et pâte d'amande</p>
-                                <p class="menu-card--flex--price">23€</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button>Commander</button>
-            </div>
+      <div class="menu-container">
+        <div class="menu-container--img-container">
+          <img
+            src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+            alt=""
+          />
         </div>
+
+        <div class="menu-container--insert">
+          <div class="menu-container--insert--header">
+            <h3>À la française</h3>
+            <i class="fa-regular fa-heart fa-xl"></i>
+            <i class="fa-solid fa-heart fa-xl"></i>
+          </div>
+          <div class="menu-container--inside">
+            <div class="menu-section">
+              <h3>Entrées</h3>
+              <div class="menu-section--underline"></div>
+              <div class="menu-cards entrees">
+                <div class="menu-cards">
+                  <div class="menu-card">
+                    <div class="menu-card--content">
+                      <h4 class="menu-card--title">
+                        Tartare de poulpe acidulé
+                      </h4>
+                      <div class="menu-card--flex">
+                        <p class="menu-card--flex--subtitle">
+                          Aux zests d'orange
+                        </p>
+                        <p class="menu-card--flex--price">25€</p>
+                      </div>
+                    </div>
+                    <div class="green-square">
+                      <i class="fa-solid fa-xl fa-circle-check"></i>
+                    </div>
+                  </div>
+                  <div class="menu-card">
+                    <div class="menu-card--content">
+                      <h4 class="menu-card--title">
+                        Velouté de légumes d'antan
+                      </h4>
+                      <div class="menu-card--flex">
+                        <p class="menu-card--flex--subtitle">
+                          Carotte, panais, topinambour
+                        </p>
+                        <p class="menu-card--flex--price">35€</p>
+                      </div>
+                    </div>
+                    <div class="green-square">
+                      <i class="fa-solid fa-xl fa-circle-check"></i>
+                    </div>
+                  </div>
+                  <div class="menu-card">
+                    <div class="menu-card--content">
+                      <h4 class="menu-card--title">Soupe à l'oignon</h4>
+                      <div class="menu-card--flex">
+                        <p class="menu-card--flex--subtitle">Revisitée</p>
+                        <p class="menu-card--flex--price">20€</p>
+                      </div>
+                    </div>
+                    <div class="green-square">
+                      <i class="fa-solid fa-xl fa-circle-check"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="menu-section">
+              <h3>Plats</h3>
+              <div class="menu-section--underline"></div>
+              <div class="menu-cards main-course">
+                <div class="menu-cards">
+                  <div class="menu-card">
+                    <div class="menu-card--content">
+                      <h4 class="menu-card--title">Coquilles Saint-Jacques</h4>
+                      <div class="menu-card--flex">
+                        <p class="menu-card--flex--subtitle">
+                          Accompagnées d'une purée de panais
+                        </p>
+                        <p class="menu-card--flex--price">40€</p>
+                      </div>
+                    </div>
+                    <div class="green-square">
+                      <i class="fa-solid fa-xl fa-circle-check"></i>
+                    </div>
+                  </div>
+                  <div class="menu-card">
+                    <div class="menu-card--content">
+                      <h4 class="menu-card--title">Magret de canard</h4>
+                      <div class="menu-card--flex">
+                        <p class="menu-card--flex--subtitle">
+                          Et parmentier de pommes de terres
+                        </p>
+                        <p class="menu-card--flex--price">35€</p>
+                      </div>
+                    </div>
+                    <div class="green-square">
+                      <i class="fa-solid fa-xl fa-circle-check"></i>
+                    </div>
+                  </div>
+                  <div class="menu-card">
+                    <div class="menu-card--content">
+                      <h4 class="menu-card--title">
+                        Pigeonneau d'Ille-et-Vilaine
+                      </h4>
+                      <div class="menu-card--flex">
+                        <p class="menu-card--flex--subtitle">
+                          Sur son lit de gnocchis aux légumes
+                        </p>
+                        <p class="menu-card--flex--price">44€</p>
+                      </div>
+                    </div>
+                    <div class="green-square">
+                      <i class="fa-solid fa-xl fa-circle-check"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="menu-section">
+              <h3>Desserts</h3>
+              <div class="menu-section--underline"></div>
+              <div class="menu-cards desserts">
+                <div class="menu-cards">
+                  <div class="menu-card">
+                    <div class="menu-card--content">
+                      <h4 class="menu-card--title">
+                        Pétales de violettes glacés
+                      </h4>
+                      <div class="menu-card--flex">
+                        <p class="menu-card--flex--subtitle">
+                          Et purée de noisettes
+                        </p>
+                        <p class="menu-card--flex--price">18€</p>
+                      </div>
+                    </div>
+                    <div class="green-square">
+                      <i class="fa-solid fa-xl fa-circle-check"></i>
+                    </div>
+                  </div>
+                  <div class="menu-card">
+                    <div class="menu-card--content">
+                      <h4 class="menu-card--title">Fondant au chocolat</h4>
+                      <div class="menu-card--flex">
+                        <p class="menu-card--flex--subtitle">Revisité</p>
+                        <p class="menu-card--flex--price">22€</p>
+                      </div>
+                    </div>
+                    <div class="green-square">
+                      <i class="fa-solid fa-xl fa-circle-check"></i>
+                    </div>
+                  </div>
+                  <div class="menu-card">
+                    <div class="menu-card--content">
+                      <h4 class="menu-card--title">
+                        Millefeuille croustillant
+                      </h4>
+                      <div class="menu-card--flex">
+                        <p class="menu-card--flex--subtitle">
+                          Myrtilles et pâte d'amande
+                        </p>
+                        <p class="menu-card--flex--price">23€</p>
+                      </div>
+                    </div>
+                    <div class="green-square">
+                      <i class="fa-solid fa-xl fa-circle-check"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button>Commander</button>
+        </div>
+      </div>
     </main>
     <footer>
-        <img src="images/logo/ohmyfood@2x.svg" alt="logo Oh My Food">
-        <p><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
-        <p><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
-        <p>Mentions légales</p>
-        <p>Contact</p>
+      <img src="images/logo/ohmyfood@2x.svg" alt="logo Oh My Food" />
+      <p><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
+      <p><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
+      <p>Mentions légales</p>
+      <p>Contact</p>
     </footer>
-    <script src="https://kit.fontawesome.com/bfd598c223.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/bfd598c223.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
