--- a/index.html
+++ b/index.html
@@ -1,150 +1,162 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sass/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="sass/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <title>ohmyfood</title>
-</head>
+  </head>
 
-<body>
-    <header><img src="images/logo/ohmyfood.png" alt="logo Oh My Food"></header>
+  <body>
+    <header>
+      <img src="images/logo/ohmyfood.png" alt="logo Oh My Food" />
+    </header>
 
     <main>
-        <article>
-            <section>
-                <div class="loc-input">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <p>Paris, Belleville</p>
-                </div>
-                <div class="greyblock welcome">
-                    <h3>Réservez le menu qui vous convient</h3>
-                    <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                    <button>Explorez nos restaurants</button>
-                </div>
-            </section>
-            <section class="steps">
-                <h3>Fonctionnement</h3>
-                <div class="step">
-                    <div class="step--number">1</div>
-                    <div class="flex">
-                        <i class="fa-solid fa-mobile-screen-button"></i>
-                        <p>Choisissez un restaurant</p>
-                    </div>
-                </div>
-                <div class="step">
-                    <div class="step--number">2</div>
-                    <div class="flex">
-                        <i class="fa-solid fa-list-ul"></i>
-                        <p>Composez votre menu</p>
-                    </div>
-                </div>
-                <div class="step--active">
-                    <div class="step--number">3</div>
-                    <div class="flex">
-                        <i class="fa-solid fa-store"></i>
-                        <p>Dégustez au restaurant</p>
-                    </div>
-                </div>
-            </section>
-            <section class="greyblock">
-                <h4>Restaurants</h4>
+      <article>
+        <section>
+          <div class="loc-input">
+            <i class="fa-solid fa-location-dot"></i>
+            <p>Paris, Belleville</p>
+          </div>
+          <div class="greyblock welcome">
+            <h3>Réservez le menu qui vous convient</h3>
+            <p>
+              Découvrez des restaurants d'exception, sélectionnés par nos soins.
+            </p>
+            <button>Explorez nos restaurants</button>
+          </div>
+        </section>
+        <section class="steps">
+          <h3>Fonctionnement</h3>
+          <div class="step">
+            <div class="step--number">1</div>
+            <div class="flex">
+              <i class="fa-solid fa-mobile-screen-button"></i>
+              <p>Choisissez un restaurant</p>
+            </div>
+          </div>
+          <div class="step">
+            <div class="step--number">2</div>
+            <div class="flex">
+              <i class="fa-solid fa-list-ul"></i>
+              <p>Composez votre menu</p>
+            </div>
+          </div>
+          <div class="step--active">
+            <div class="step--number">3</div>
+            <div class="flex">
+              <i class="fa-solid fa-store"></i>
+              <p>Dégustez au restaurant</p>
+            </div>
+          </div>
+        </section>
+        <section class="greyblock">
+          <h4>Restaurants</h4>
 
-                <div class="restaurant-box">
-                    <div class="restaurant-box--img-container">
-                        <div class="new-badge">
-                            Nouveau
-                        </div>
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            alt="Restaurant La palette du goût">
-                    </div>
-                    <div class="restaurant-box--flex-ctn">
-                        <a href="./menu-lapalettedugout.html">
-                            <div>
-                                <h4>La palette du goût</h4>
-                                <p>Ménilmontant</p>
-                            </div>
-                        </a>
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
-                </div>
+          <div class="restaurant-boxes">
+            <div class="restaurant-box">
+              <div class="restaurant-box--img-container">
+                <div class="new-badge">Nouveau</div>
+                <img
+                  src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  alt="Restaurant La palette du goût"
+                />
+              </div>
+              <div class="restaurant-box--flex-ctn">
+                <a href="./menu-lapalettedugout.html">
+                  <div>
+                    <h4>La palette du goût</h4>
+                    <p>Ménilmontant</p>
+                  </div>
+                </a>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+              </div>
+            </div>
 
+            <div class="restaurant-box">
+              <div class="restaurant-box--img-container">
+                <div class="new-badge">Nouveau</div>
+                <img
+                  src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                  alt="Restaurant La note enchantée"
+                />
+              </div>
+              <div class="restaurant-box--flex-ctn">
+                <a href="./menu-lanoteenchantee.html">
+                  <div>
+                    <h4>La note enchantée</h4>
+                    <p>Charonne</p>
+                  </div>
+                </a>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+              </div>
+            </div>
 
-                <div class="restaurant-box">
-                    <div class="restaurant-box--img-container">
-                        <div class="new-badge">
-                            Nouveau
-                        </div>
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
-                    </div>
-                    <div class="restaurant-box--flex-ctn">
-                        <a href="./menu-lanoteenchantee.html">
-                            <div>
-                                <h4>La note enchantée</h4>
-                                <p>Charonne</p>
-                            </div>
-                        </a>
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
-                </div>
+            <div class="restaurant-box">
+              <div class="restaurant-box--img-container">
+                <img
+                  src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                  alt="Restaurant À la française"
+                />
+              </div>
+              <div class="restaurant-box--flex-ctn">
+                <a href="./menu-alafrancaise.html">
+                  <div>
+                    <h4>À la française</h4>
+                    <p>Cité Rouge</p>
+                  </div>
+                </a>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+              </div>
+            </div>
 
-                <div class="restaurant-box">
-                    <div class="restaurant-box--img-container">
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                            alt="Restaurant À la française">
-                    </div>
-                    <div class="restaurant-box--flex-ctn">
-                        <a href="./menu-alafrancaise.html">
-                            <div>
-                                <h4>À la française</h4>
-                                <p>Cité Rouge</p>
-                            </div>
-                        </a>
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
-                </div>
-
-                <div class="restaurant-box">
-                    <div class="restaurant-box--img-container">
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                            alt="Restaurant Le délice des sens">
-                    </div>
-                    <div class="restaurant-box--flex-ctn">
-                        <a href="./menu-ledelicedessens.html">
-                            <div>
-                                <h4>Le délice des sens</h4>
-                                <p>Folie-Méricourt</p>
-                            </div>
-                        </a>
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
-                </div>
-            </section>
-        </article>
+            <div class="restaurant-box">
+              <div class="restaurant-box--img-container">
+                <img
+                  src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  alt="Restaurant Le délice des sens"
+                />
+              </div>
+              <div class="restaurant-box--flex-ctn">
+                <a href="./menu-ledelicedessens.html">
+                  <div>
+                    <h4>Le délice des sens</h4>
+                    <p>Folie-Méricourt</p>
+                  </div>
+                </a>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+              </div>
+            </div>
+          </div>
+        </section>
+      </article>
     </main>
     <footer>
-        <img src="images/logo/ohmyfood@2x.svg" alt="logo Oh My Food">
-        <p><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
-        <p><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
-        <p>Mentions légales</p>
-        <p>Contact</p>
+      <img src="images/logo/ohmyfood@2x.svg" alt="logo Oh My Food" />
+      <p><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
+      <p><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
+      <p>Mentions légales</p>
+      <p>Contact</p>
     </footer>
-    <script src="https://kit.fontawesome.com/bfd598c223.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/bfd598c223.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
