--- a/menu-lapalettedugout.html
+++ b/menu-lapalettedugout.html
@@ -1,128 +1,204 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sass/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="sass/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <title>ohmyfood - Menu - La palette du goût</title>
-</head>
+  </head>
 
-<body>
-    <header><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a><img src="images/logo/ohmyfood.png"
-            alt="logo Oh My Food"></header>
-
+  <body>
+    <header>
+      <a href="index.html">
+        <i class="fa-solid fa-arrow-left"></i>
+      </a>
+      <img src="images/logo/ohmyfood.png" alt="logo Oh My Food" />
+    </header>
     <main>
-        <div class="menu-container">
-            <div class="menu-container--img-container">
-                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-            </div>
-            <div class="menu-container--insert">
-                <div class="menu-container--insert--header">
-                    <h3>La palette du goût</h3>
-                    <i class="fa-regular fa-heart fa-xl"></i>
-                </div>
-                <div class="menu-section">
-                    <h3>Entrées</h3>
-                    <div class="menu-section--underline"></div>
-                    <div class="menu-cards">
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Fricassée d'escargot</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Au piment d'espelette</p>
-                                <p class="menu-card--flex--price">25€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Foie gras de canard mi-cuit</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Et ses copeaux de truffe noire</p>
-                                <p class="menu-card--flex--price">35€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Oeuf au plat</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Assaisonné à la truffe sur lit de caviar</p>
-                                <p class="menu-card--flex--price">20€</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-section">
-                    <h3>Plats</h3>
-                    <div class="menu-section--underline"></div>
-                    <div class="menu-cards">
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Filet de boeuf aux herbes</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Accompagné de sa ribambelle de légumes</p>
-                                <p class="menu-card--flex--price">40€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Parmentier de queue de boeuf</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">À la truffe noire sur sa purée de panais</p>
-                                <p class="menu-card--flex--price">35€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Filet de Turbot</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Aux agrumes</p>
-                                <p class="menu-card--flex--price">44€</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-section">
-                    <h3>Desserts</h3>
-                    <div class="menu-section--underline"></div>
-                    <div class="menu-cards">
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Paris-Brest</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Revisité</p>
-                                <p class="menu-card--flex--price">18€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Macaron au chocolat d'exception</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Et glace à la vanille de Madagascar</p>
-                                <p class="menu-card--flex--price">22€</p>
-                            </div>
-                        </div>
-                        <div class="menu-card">
-                            <h4 class="menu-card--title">Mousse au chocolat</h4>
-                            <div class="menu-card--flex">
-                                <p class="menu-card--flex--subtitle">Au piment d'espelette et à la truffe noire</p>
-                                <p class="menu-card--flex--price">23€</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button>Commander</button>
-            </div>
+      <div class="menu-container">
+        <div class="menu-container--img-container">
+          <img
+            src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            alt=""
+          />
         </div>
+        <div class="menu-container--insert">
+          <div class="menu-container--insert--header">
+            <h3>La palette du goût</h3>
+            <i class="fa-regular fa-heart fa-xl"></i>
+            <i class="fa-solid fa-heart fa-xl"></i>
+          </div>
+          <div class="menu-container--inside">
+            <div class="menu-section">
+              <h3>Entrées</h3>
+              <div class="menu-section--underline"></div>
+              <div class="menu-cards entrees">
+                <div class="menu-card">
+                  <div class="menu-card--content">
+                    <h4 class="menu-card--title">Fricassée d'escargot</h4>
+                    <div class="menu-card--flex">
+                      <p class="menu-card--flex--subtitle">
+                        Au piment d'espelette
+                      </p>
+                      <p class="menu-card--flex--price">25€</p>
+                    </div>
+                  </div>
+                  <div class="green-square">
+                    <i class="fa-solid fa-xl fa-circle-check"></i>
+                  </div>
+                </div>
+                <div class="menu-card">
+                  <div class="menu-card--content">
+                    <h4 class="menu-card--title">
+                      Foie gras de canard mi-cuit
+                    </h4>
+                    <div class="menu-card--flex">
+                      <p class="menu-card--flex--subtitle">
+                        Et ses copeaux de truffe noire
+                      </p>
+                      <p class="menu-card--flex--price">35€</p>
+                    </div>
+                  </div>
+                  <div class="green-square">
+                    <i class="fa-solid fa-xl fa-circle-check"></i>
+                  </div>
+                </div>
+                <div class="menu-card">
+                  <div class="menu-card--content">
+                    <h4 class="menu-card--title">Oeuf au plat</h4>
+                    <div class="menu-card--flex">
+                      <p class="menu-card--flex--subtitle">
+                        Assaisonné à la truffe sur lit de caviar
+                      </p>
+                      <p class="menu-card--flex--price">20€</p>
+                    </div>
+                  </div>
+                  <div class="green-square">
+                    <i class="fa-solid fa-xl fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="menu-section">
+              <h3>Plats</h3>
+              <div class="menu-section--underline"></div>
+              <div class="menu-cards main-course">
+                <div class="menu-card">
+                  <div class="menu-card--content">
+                    <h4 class="menu-card--title">Filet de boeuf aux herbes</h4>
+                    <div class="menu-card--flex">
+                      <p class="menu-card--flex--subtitle">
+                        Accompagné de sa ribambelle de légumes
+                      </p>
+                      <p class="menu-card--flex--price">40€</p>
+                    </div>
+                  </div>
+                  <div class="green-square">
+                    <i class="fa-solid fa-xl fa-circle-check"></i>
+                  </div>
+                </div>
+                <div class="menu-card">
+                  <div class="menu-card--content">
+                    <h4 class="menu-card--title">
+                      Parmentier de queue de boeuf
+                    </h4>
+                    <div class="menu-card--flex">
+                      <p class="menu-card--flex--subtitle">
+                        À la truffe noire sur sa purée de panais
+                      </p>
+                      <p class="menu-card--flex--price">35€</p>
+                    </div>
+                  </div>
+                  <div class="green-square">
+                    <i class="fa-solid fa-xl fa-circle-check"></i>
+                  </div>
+                </div>
+                <div class="menu-card">
+                  <div class="menu-card--content">
+                    <h4 class="menu-card--title">Filet de Turbot</h4>
+                    <div class="menu-card--flex">
+                      <p class="menu-card--flex--subtitle">Aux agrumes</p>
+                      <p class="menu-card--flex--price">44€</p>
+                    </div>
+                  </div>
+                  <div class="green-square">
+                    <i class="fa-solid fa-xl fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="menu-section">
+              <h3>Desserts</h3>
+              <div class="menu-section--underline"></div>
+              <div class="menu-cards desserts">
+                <div class="menu-card">
+                  <div class="menu-card--content">
+                    <h4 class="menu-card--title">Paris-Brest</h4>
+                    <div class="menu-card--flex">
+                      <p class="menu-card--flex--subtitle">Revisité</p>
+                      <p class="menu-card--flex--price">18€</p>
+                    </div>
+                  </div>
+                  <div class="green-square">
+                    <i class="fa-solid fa-xl fa-circle-check"></i>
+                  </div>
+                </div>
+                <div class="menu-card">
+                  <div class="menu-card--content">
+                    <h4 class="menu-card--title">
+                      Macaron au chocolat d'exception
+                    </h4>
+                    <div class="menu-card--flex">
+                      <p class="menu-card--flex--subtitle">
+                        Et glace à la vanille de Madagascar
+                      </p>
+                      <p class="menu-card--flex--price">22€</p>
+                    </div>
+                  </div>
+                  <div class="green-square">
+                    <i class="fa-solid fa-xl fa-circle-check"></i>
+                  </div>
+                </div>
+                <div class="menu-card">
+                  <div class="menu-card--content">
+                    <h4 class="menu-card--title">Mousse au chocolat</h4>
+                    <div class="menu-card--flex">
+                      <p class="menu-card--flex--subtitle">
+                        Au piment d'espelette et à la truffe noire
+                      </p>
+                      <p class="menu-card--flex--price">23€</p>
+                    </div>
+                  </div>
+                  <div class="green-square">
+                    <i class="fa-solid fa-xl fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button>Commander</button>
+        </div>
+      </div>
     </main>
     <footer>
-        <img src="images/logo/ohmyfood@2x.svg" alt="logo Oh My Food">
-        <p><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
-        <p><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
-        <p>Mentions légales</p>
-        <p>Contact</p>
+      <img src="images/logo/ohmyfood@2x.svg" alt="logo Oh My Food" />
+      <p><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
+      <p><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
+      <p>Mentions légales</p>
+      <p>Contact</p>
     </footer>
-    <script src="https://kit.fontawesome.com/bfd598c223.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/bfd598c223.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
