--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <img src="images/logo/ohmyfood.png" alt="logo Oh My Food" />
     </header>
 
+    <div class="loader">
+      <i class="fa-solid fa-2xl fa-spinner fa-spin-pulse"></i>
+    </div>
+
     <main>
       <article>
         <section>
@@ -152,7 +156,7 @@
       <p><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
       <p><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
       <p>Mentions légales</p>
-      <p>Contact</p>
+      <a href="mailto:ohmyfood@contact.net">Contact</a>
     </footer>
     <script
       src="https://kit.fontawesome.com/bfd598c223.js"
