--- a/menu-ledelicedessens.html
+++ b/menu-ledelicedessens.html
@@ -193,7 +193,7 @@
       <p><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
       <p><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
       <p>Mentions légales</p>
-      <p>Contact</p>
+      <a href="mailto:ohmyfood@contact.net">Contact</a>
     </footer>
     <script
       src="https://kit.fontawesome.com/bfd598c223.js"
